Se resuelven dudas conceptuables modelo Forward MLR mtcars

--- a/MLR/Examples/R2_CP_AIC_BIC.Rmd
+++ b/MLR/Examples/R2_CP_AIC_BIC.Rmd
@@ -131,54 +131,40 @@ COMIENZO A VALIDAR SUPUESTOS.
 ValidarSupuestos <- function (respuesta ,modelo,confianza){
   
   # Test de normalidad
+  
   shapiro <- shapiro.test(modelo$residuals)
   shapiro <- shapiro$p.value
   
   lillie <- lillie.test(modelo$residuals)
   lillie <- lillie$p.value
   
-  if((shapiro > confianza) & (lillie > confianza)){
-    
-    print("Existe normaliadad y blablabla")
-    
-  }else{
-    
-    print("No Existe normaliadad y blablabla")
-  }
+    ifelse((shapiro > confianza) & (lillie > confianza), print("Existe normalidad de los errores"), print("No existe normalidad de los errores"))
   
-  # Test de algo jummm
+  # Test de homocedasticidad
   
-  baruch <- bptest(modelo) ### Test Breusch-Pagan valor.p =0.39
+  
+  baruch <- bptest(modelo)
   baruch <- baruch$p.value
 
   golfred <- gqtest(modelo)
   golfred <- golfred$p.value
 
-  if((baruch > confianza) & (golfred > confianza)){
-    
-    print("Existe homocet y blablabla")
-    
-  }else{
-    
-    print("No Existe homocet y blablabla")
-  }
+  ifelse((baruch > confianza) & (golfred > confianza), print("Existe homocedasticidad"), print("No existe homocedasticidad"))
+  
+  # Test de independencia
   
   indepenencia <- dwtest(STATEAID ~ modelo$residuals)
   indepenencia <- indepenencia$p.value
   
-  if(indepenencia > confianza){
-    
-    print("hay independencia")
-    
-  }else{
-    
-    print("No hay independencia")
-  }
+  ifelse((indepenencia > confianza), print("Hay independencia"), print("No hay independencia"))
+  
+  # Construccion de la Tabla de respuestas
   
   tabla <- rbind(shapiro, lillie, baruch, golfred, indepenencia)
   rownames(tabla) <- c("shapiro", "lillie", "baruch", "golfred", "independencia")
   colnames(tabla) <- c("p.value")
   print(tabla)
+
   
 } 
 ```
