--- a/MLR/Exercices/Backward/backward_mtcars.Rmd
+++ b/MLR/Exercices/Backward/backward_mtcars.Rmd
@@ -1,7 +1,18 @@
 ---
-title: "MLR backward mtcars"
-output: html_notebook
+title: "R Forward MTCARS"
+author: "Yosef Guevara Salamanca"
+date: "26/11/2020"
+output: pdf_document
 ---
+
+
+
+```{r}
+library(lmtest)
+library(MASS)
+library(nortest)
+library(crayon)
+```
 
 ```{r}
 data(mtcars)
@@ -9,7 +20,10 @@ attach(mtcars)
 ```
 
 
-#### PASO 0: AJUSTAR MODELO FULL (CON LAS TRES COVARIABLES)
+#### PASO 0: 
+
+
+Para el primer paso ajustamos el modelo nulo con las 3 covariables
 
 
 ```{r}
@@ -17,6 +31,13 @@ attach(mtcars)
 mt.fit3 <- lm(mpg~ wt + disp + hp)
 summary(mt.fit3)
 ```
+Como analisis previo a los calculos de los modelos propuesto de regresion medainte el summary podemos ver que el modelo Full no es el mas apto para explicar a mpg pues el p.value de disp es 0.92
+
+
+```{r}
+anova(mt.fit3)
+```
+
 
 ```{r}
 SCReg.full<-sum(anova(mt.fit3)[1:3,2])
@@ -26,31 +47,42 @@ SCReg.full
 ```{r}
 CME.full<-anova(mt.fit3)[4,3]
 CME.full
-anova(mt.fit3)
+
 ```
 
 
 #### PASO 1: Eliminar una covariable de ser posible.
 
-COLOCAR f.crítico.1;;; n-r = n-(p+1)= 7-4=3
+Lo primero que tenemos que hacer es eliminar una covariable, para ellos generaremos un f.criticoFull con lso siguientes parametros
 
+Alpha input <- 0.1
+G.L SSR = No. Covariables = 3
+G.L SSE = (n - 1) - G.L SSR = 32 - 1 - 3 = 28
 
 ```{r}
 
-df1 = 1
-df2 = nrow(mtcars)-ncol(mtcars)
 
+# G.L SST
+# G.L SSR
+# G.L SSE
 
-f.critico.1.back<-qf(0.99,df1,df2)
+#qf(1-alpha, Gl. SSR, Gl. SSE)
+
+alpha <- 0.1
+
+f.critico.1.back<-qf(1 - alpha ,3,28)
 f.critico.1.back  
 
 ```
 
-Se elimina la covariable con Fparcial  menor que 8.016597
-CALCULAR 3 valores de fparcial.1.back
+Se eliminara la covariable con Fparcial  menor que 4.24
+para ello calcularemos los 3 valores de fparciales de cada modelo con 2 covariables
 
-#### a) AJUSTAMOS LOS 3 MODELOS CON DOS COVARIABLES
-X1: wt;;; X2: hp;; X3: disp
+#### a) Ajustamos el modelo con parejas de 2 covaraibles
+
+X1: wt; 
+X2: hp; 
+X3: disp;
 
 ```{r}
 cat(red("mpg ~ wt + hp\n"))
@@ -70,7 +102,9 @@ anova(mt.fit23)
 ```
 
 
-#### b) CALCULAMOS SCReg de los 3 modelos
+#### b) Calculamos SCReg de los 3 modelos
+
+Se extrae las sumas cuadradas del error de cada subconjunto de covariables 
 
 ```{r}
 
@@ -100,5 +134,68 @@ decidir.paso1.B<-cbind(f.critico.1.back, fparcial.sin.3,fparcial.sin.2,fparcial.
 decidir.paso1.B
 
 ```
-Podemos ver que apartir de los Fparciales es posible descartar los 2 modelos  que contienen el hp y el disp
+Podemos ver que apartir de los Fparciales es posible descartar la variable disp pues el F parical del modelo lm(mpg ~ wt + hp),se propone este modelo para su posterior evaluacion de modelos.
 
+
+Por ende podemos decir que el modelo propuesto que mejor explica a mpg mediante la metodologia Backward es:
+
+mpg = B0 + B1 * wt + B2 * hp
+
+
+### Validacion de supuestos
+
+Para la validacion de los de supuestos, se utiliza el modelo propuesto modelo y sus residuales, para lo cual se ha creado la siguiente funcion.
+
+```{r}
+ValidarSupuestos <- function (respuesta ,modelo,confianza){
+  
+  print("En conclusión: ")
+  
+  # Test de normalidad de los residuales
+  
+  shapiro <- shapiro.test(modelo$residuals)
+  shapiro <- shapiro$p.value
+  
+  lillie <- lillie.test(modelo$residuals)
+  lillie <- lillie$p.value
+  
+  ifelse((shapiro > confianza) & (lillie > confianza), print("Normalidad de los residuales, no se rechaza H0"), print("No existe normalidad de los residuales, se rechaza H0"))
+  
+  # Test de homocedasticidad (varianza constante de los residuales)
+  
+  
+  Breusch <- bptest(modelo)
+  Breusch <- Breusch$p.value
+
+  Goldfeld <- gqtest(modelo)
+  Goldfeld <- Goldfeld$p.value
+
+  ifelse((Breusch > confianza) & (Goldfeld > confianza), print("Existe homocedasticidad, no se rechaza H0"), print("No existe homocedasticidad, se rechaza H0"))
+  
+  # Test de independencia de errores
+  
+  indepenencia <- dwtest(mpg ~ modelo$residuals)
+  indepenencia <- indepenencia$p.value
+  
+  ifelse((indepenencia > confianza), print("Hay independencia de errores, No se rechaza Ho"), print("No hay independencia de errores, se rechaza Ho"))
+  
+  # Construccion de la Tabla de respuestas
+  
+  tabla <- rbind(shapiro, lillie, Breusch, Goldfeld, indepenencia)
+  rownames(tabla) <- c("Shapiro", "Lillie", "Breusch", "Goldfeld", "independencia")
+  colnames(tabla) <- c("p.value")
+
+  print(tabla)
+}
+
+```
+
+
+```{r}
+
+modelo_propuesto <- lm(mpg ~ wt + hp)
+
+
+ValidarSupuestos(mpg,modelo_propuesto,alpha)
+
+```
